<resources>
    <string name="app_name">noice_service</string>
    <string name="tv_heading">NOICE SERVICE</string>
    <string name="tv_titleDeliveryReq">Delivery Requests</string>
    <string name="tv_titleDelReq">Delete Request Details</string>
    <string name="tv_selectedReq">Request</string>
    <string name="tv_customerID">Customer ID :</string>
    <string name="tv_customerIDtext">C001</string>
    <string name="tv_contactNumber">Contact Number :</string>
    <string name="tv_contactNumberText">077 123 4567</string>
    <string name="tv_vehicleName">Vehicle Name :</string>
    <string name="tv_vehicleNameText">Noice Car</string>
    <string name="tv_locationDetails">Location Details :</string>
    <string name="tv_locationDetailsText">Noice Lane, Noice</string>
    <string name="btn_delete">DELETE</string>
    <string name="btn_newReq">NEW REQUEST</string>
    <string name="tv_titleDeliveryReqHandling">Delivery Request Handling</string>
    <string name="tv_editReqDetails">Edit Request Details</string>
    <string name="tv_customerHomeTitle">CUSTOMER HOME</string>
    <string name="tv_adminHomeTitle">ADMIN HOME</string>
    <string name="tv_newDeliveryReq">New Delivery Request</string>
    <string name="tv_customerName">Customer</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="btn_edit">EDIT</string>
    <string name="tv_generateReceipt">Generate Receipt</string>
    <string name="tv_custName">Customer Name :</string>
    <string name="tv_date">Date :</string>
    <string name="tv_bookingDetails">Booking Details</string>
    <string name="tv_basePrice">Base Price :</string>
    <string name="tv_additionalServices">Additional Services</string>
    <string name="checkBox">Service 1</string>
    <string name="checkBox1">Service 2</string>
    <string name="tv_deliveryFee">Delivery Fee :</string>
    <string name="et_basePricetext">Base Price Text</string>
    <string name="btn_calcBill">Calculate Bill</string>
    <string name="tv_netAmount">Net Amount :</string>
    <string name="tv_amount">Amount</string>
    <string name="tv_statusText">status</string>
    <string name="invalid_nameD">"Please enter a valid name "</string>
    <string name="invalid_numberD">Enter a valid contact number</string>
    <string name="invalid_emailD">Enter a valid Email</string>
    <string name="invalid_vehicleNameD">Enter a valid name</string>
    <string name="invalid_statusD">Enter a valid status</string>
    <string name="tv_customerEmail">Email :</string>
    <string name="btn_email">Email</string>
    <string name="tv_statusT">Change Status</string>
    <string name="tv_customerNameReceipt">Noice User</string>
    <string name="tv_customerEmailReceipt">noice@gmail.com</string>
    <string name="tv_currentPrice">Current Price</string>
    <string name="tv_basePriceText">3000.00</string>
    <string name="et_delFee">500.00</string>
    <string name="tv_netAmountText">3500.00</string>
    <string name="btn_emailR">Send Mail</string>
    <string name="btn_receipt">Receipt</string>

    //JANUDI
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_titleBookingList">VIEW BOOKINGS</string>
    <string name="btn_tabview">TAB VIEW</string>
    <string name="tv_titleChangePass">CHANGE PASSWORD</string>
    <string name="et_oldpass">Enter Old Password</string>
    <string name="et_newpass">Enter New Password</string>
    <string name="et_confirmpass">Confirm Password</string>
    <string name="btn_changepass">CHANGE PASSWORD</string>
    <string name="tv_titleCreateAccount">CREATE NEW ACCOUNT</string>
    <string name="btn_show">DELETE ACCOUNT</string>
    <string name="tv_titleLogin">LOGIN</string>
    <string name="et_username">Enter Your Username</string>
    <string name="et_password">Enter Your Password</string>
    <string name="tv_titleMyAccount">MY PROFILE</string>
    <string name="btn_editProfile">EDIT PROFILE</string>
    <string name="btn_continue">CONTINUE</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_customer">CUSTOMER INFORMATION</string>
    <string name="btn_booking">BOOKING INFORMATION</string>
    <string name="btn_list">LIST VIEW</string>
    <string name="forgotPass"><u>FORGOT PASSWORD?</u></string>

    //SHEHAN
    <string name="time1">10:00 AM - 11:00 AM</string>
    <string name="time2">11:00 AM - 12:00 PM</string>
    <string name="car_wash">Car wash</string>
    <string name="full_service">Full service</string>
    <string name="Oil_change">Oil change</string>
    <string name="car_service">Car service</string>
    <string name="customer_name">S V Perera</string>
    <string name="car_number">ABC 1234</string>
    <string name="bookings_title">Bookings</string>
    <string name="my_bookings_title">My bookings</string>
    <string name="cancel_button">cancel</string>
    <string name="finish_button">mark as finish</string>
    <string name="book_button">book</string>
    <string name="price1">Rs 500</string>
    <string name="price2">Rs 800</string>
    <string name="approx_time">Approx 45 mins</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur
        adipiscing elit, sed do eiusmod tempor incididunt ut labore et
        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</string>
    <string name="report">Monthly report</string>
    <string name="appoinments_no">10 appoinments</string>
    <string name="find_report">find report</string>
    <string name="report_description">Select month to see total appointments</string>

    <string name="heading_s">Heading</string>
    <string name="totalTime_s">5 Hours</string>
    <string name="description_s">This is description</string>
    <string name="includes_s">Includes</string>
    <string name="price_s">1000</string>
    <string name="price_label_s">Rs</string>
    <string name="approx_time_label_s">Will take approximately</string>
    <string name="form_fill_s">Request Service</string>
    <string name="cus_number_label">Customers Phone</string>
    <string name="cus_number">011789456</string>
    <string name="car_no_label">Car Number</string>
    <string name="car_no">CAR 1015</string>
    <string name="Bookings">BOOKINGS</string>



    //AMANTHA
    <string name="title_activity_service_home">ServiceHome</string>
    <string name="tv_serviceHeading">Add Service</string>
    <string name="et_serviceTitle">Service Title :</string>
    <string name="et_serviceDescription">Service Description :</string>
    <string name="et_price">Price(LKR) :</string>
    <string name="btn_chooseImage">Choose Image</string>
    <string name="et_selectEliquid">Select Equipments and Liquids :</string>
    <string name="btn_addService">Add Service</string>
    <string name="tv_selectedServiceh">Service 1</string>
    <string name="et_serviceTex">Service 1</string>
    <string name="et_sericeDex">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="et_serviceEql">★ Mobil &#xA;★ Engine Tune &#xA;★ Engine wash Liquid &#xA;★ Upholstry cleaner wash</string>
    <string name="et_priceEx">LKR1234/-</string>
    <string name="btn_serviceDelete">Delete</string>
    <string name="btn_serviceUpdate">Update</string>
    <string name="tv_manageService">Manage Services</string>
    <string name="tv_boxHeading1">View Services</string>
    <string name="tv_boxDescription1">Now you can view and manage added services in here</string>
    <string name="btn_viewS">View Services</string>
    <string name="tv_boxHeading2">Add Services</string>
    <string name="tv_boxDescription2">Now you can add services as you want</string>
    <string name="btn_addS">Add Services</string>
    <string name="chk_mobil">Mobil</string>
    <string name="chk_caltex">Caltex</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_update">Update</string>
    <string name="et_serviceImage">Service image :</string>
    <string name="btn_uploadS">Upload</string>
    <string name="tv_user">username</string>
    <string name="btn_okay">Okay</string>
    <string name="btn_cancel">Cancel</string>
    <string name="tv_updateSuccess">Update Successful!</string>
    //Amantha validations
    <string name="empty_title">Please enter the title!</string>
    <string name="empty_description">Please enter the Description!</string>
    <string name="empty_price">Please enter the price!</string>
    <string name="empty_equ">Please enter the resources!</string>
    <string name="empty_totalTime">Please Select the time!</string>
    <string name="invalid_pricerange">Please enter price range between 500-15000</string>
    <string name="invalid_titleA">Do not use any special characters!</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tv_selectMonth">Select Month to calculate the total income :</string>
    <string name="tv_monthlyIncome">Monthly Income</string>
    <string name="btn_calculate">Calculate Monthly Income</string>
    <string name="tv_totlIncome">Your Total Income = Rs. 100 000</string>
    <string name="invalid_name">Please enter your name</string>
    <string name="invalid_mobile">Please enter a valid phone number</string>
    <string name="invalid_email">Email format is invalid</string>
    <string name="invalid_bday">Please enter your birthday</string>
    <string name="invalid_password">The password should have minimum 8 characters, atleast 1 alphabet, number and special character</string>
    <string name="empty_email">Enter your email address</string>
    <string name="empty_password">Enter your password</string>
    <string name="invalid_country">Please select a country</string>


</resources>