<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".SelectedUserActivity">

    <TextView
        android:id="@+id/tv_heading"
        android:layout_width="219dp"
        android:layout_height="39dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/tv_heading"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/tv_selectedServiceh"
        android:textColor="@color/colorHeader"
        android:textSize="24dp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/carservice1" />

    <RelativeLayout
        android:layout_width="194dp"
        android:layout_height="249dp"
        android:layout_marginTop="20dp">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/et_serviceTitle"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_AddService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/et_serviceDescription"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="164dp"
            android:layout_height="34dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="120dp"
            android:text="@string/et_selectEliquid"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="229dp"
            android:text="@string/et_price"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="192dp"
        android:layout_height="249dp"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="-250dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/et_serviceTex"
            android:textColor="#FFC107" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/et_sericeDex"
            android:textColor="#FFC107" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="135dp"
            android:text="@string/et_serviceEql"
            android:textColor="#FFC107" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:text="@string/et_priceEx"
            android:textColor="#FFC107" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="50dp"
        android:text="@string/btn_serviceDelete"
        android:textSize="10sp"
        app:backgroundTint="@color/GreenN"
        app:cornerRadius="5dp"
        app:icon="@android:drawable/ic_menu_delete">

    </Button>

    <Button
        android:id="@+id/btn4"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_marginLeft="260dp"
        android:layout_marginTop="-52dp"
        android:text="@string/btn_serviceUpdate"
        android:textSize="10sp"
        app:backgroundTint="@color/colorAccent"
        app:cornerRadius="5dp"
        app:icon="@android:drawable/ic_menu_edit">

    </Button>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginTop="30dp"
        android:foregroundGravity="bottom"
        app:itemBackground="@color/colorHeader"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation" />

</LinearLayout>