<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:weightSum="9"
    android:background="@drawable/editreqbg"
    android:layout_height="match_parent"
    tools:context=".EditSelectedRequest">

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:theme="@style/ToolBar"
            android:layout_height="?attr/actionBarSize">

            <TextView
                android:id="@+id/tv_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_heading"
                android:textColor="@color/colorWhiteD"
                android:textSize="25dp" />

        </androidx.appcompat.widget.Toolbar>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        //Screen Title
        <TextView
            android:id="@+id/tv_titleDeliveryReqHandling"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/tv_titleDeliveryReqHandling"
            android:textAlignment="center"
            android:textColor="@color/colorWhiteD"
            android:textSize="22sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        //Customer Name  Title
        <TextView
            android:id="@+id/tv_customerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:text="@string/tv_customerName"
            android:textColor="@color/colorWhiteD"
            android:textSize="20sp"
            android:textStyle="bold" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            //Email title
            <TextView
                android:id="@+id/tv_customerEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="80dp"
                android:text="@string/tv_customerEmail"
                android:textColor="@color/colorWhiteD"
                android:textSize="20sp"
                android:textStyle="bold" />

            //Email text
            <TextView
                android:id="@+id/tv_customerEmailtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="81dp"
                android:text="noice@noicemail.com"
                android:textColor="@color/colorWhiteD"
                android:textSize="18sp"
                android:textStyle="bold" />

            //Contact Number Title
            <TextView
                android:id="@+id/tv_contactNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="120dp"
                android:text="@string/tv_contactNumber"
                android:textColor="@color/colorWhiteD"
                android:textSize="20sp"
                android:textStyle="bold" />

            //Contact Number Text
            <TextView
                android:id="@+id/tv_contactNumberText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="190dp"
                android:layout_marginTop="122dp"
                android:text="@string/tv_contactNumberText"
                android:textColor="@color/colorWhiteD"
                android:textSize="18sp"
                android:textStyle="bold" />

            //Vehicle Name Title
            <TextView
                android:id="@+id/tv_vehicleName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="160dp"
                android:text="@string/tv_vehicleName"
                android:textColor="@color/colorWhiteD"
                android:textSize="20sp"
                android:textStyle="bold" />

            //Vehicle Name Text
            <TextView
                android:id="@+id/tv_vehicleNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="160dp"
                android:layout_marginTop="162dp"
                android:text="@string/tv_vehicleNameText"
                android:textColor="@color/colorWhiteD"
                android:textSize="18sp"
                android:textStyle="bold" />

            //Location Title
            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="200dp"
                android:text="@string/tv_locationDetails"
                android:textColor="@color/colorWhiteD"
                android:textSize="20sp"
                android:textStyle="bold" />

            //Location text
            <TextView
                android:id="@+id/tv_locationDetailstext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="180dp"
                android:layout_marginTop="202dp"
                android:text="@string/tv_locationDetailsText"
                android:textColor="@color/colorWhiteD"
                android:textSize="18sp"
                android:textStyle="bold" />

            //View Status Title
            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="250dp"
                android:text="Status :"
                android:textColor="@color/colorWhiteD"
                android:textSize="20sp"
                android:textStyle="bold" />
            //View Status
            <TextView
                android:id="@+id/tv_statusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="252dp"
                android:text="@string/tv_statusText"
                android:textColor="@color/colorWhiteD"
                android:textSize="18sp"
                android:textStyle="bold" />
            //Status Title
            <TextView
                android:id="@+id/tv_statusT"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="290dp"
                android:gravity="center_horizontal"
                android:text="@string/tv_statusT"
                android:textAlignment="center"
                android:textColor="@color/colorWhiteD"
                android:textSize="20sp"
                android:textStyle="bold" />
            //Edit Status Field
            <EditText
                android:id="@+id/et_statusText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="310dp"
                android:layout_marginRight="20sp"
                android:backgroundTint="@color/white"
                android:textColor="@color/colorWhiteD"
                android:textColorHint="@color/colorWhiteD" />
            //Email button
            <Button
                android:id="@+id/btn_email"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="365dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/buttonD"
                android:onClick="sendmail"
                android:text="@string/btn_email"
                android:textColor="@color/black" />
            //Edit button
            <Button
                android:id="@+id/btn_edit"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="420dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/buttonD"
                android:text="@string/btn_edit"
                android:textColor="@color/black" />
            //Delete button
            <Button
                android:id="@+id/btn_delete"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="475dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/buttonD"
                android:text="@string/btn_delete"
                android:textColor="@color/black" />

        </RelativeLayout>

    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        app:itemBackground="@color/colorHeader"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom ="true"
        />

</LinearLayout>