<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:weightSum="9"
    android:background="@drawable/background_bg"
    android:layout_height="match_parent"
    tools:context=".DeleteSelectedRequest">

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:theme="@style/ToolBar"
            android:layout_height="?attr/actionBarSize">

            <TextView
                android:id="@+id/tv_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_heading"
                android:textColor="@color/colorWhiteD"
                android:textSize="25dp" />

        </androidx.appcompat.widget.Toolbar>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_generateReceipt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/tv_titleDelReq"
            android:textAlignment="center"
            android:textColor="@color/colorWhiteD"
            android:textSize="22sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        android:padding="10dp">


        <TextView
            android:id="@+id/tv_customerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:text="@string/tv_selectedReq"
            android:textColor="@color/colorWhiteD"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgage_avatar"
            android:layout_width="402dp"
            android:layout_height="112dp"
            android:layout_marginTop="40dp"

            android:adjustViewBounds="true"
            android:maxWidth="100dp"
            android:maxHeight="100dp"
            android:scaleType="fitCenter"
            android:src="@drawable/avatar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp">
            //Customer Id

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/tv_custName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="170dp"
                    android:text="@string/tv_customerID"
                    android:textColor="@color/colorWhiteD"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_customerIDtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="150dp"
                    android:layout_marginTop="171dp"
                    android:text="@string/tv_customerIDtext"
                    android:textColor="@color/colorWhiteD"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_contactNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="210dp"
                    android:text="@string/tv_contactNumber"
                    android:textColor="@color/colorWhiteD"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_contactNumberText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="190dp"
                    android:layout_marginTop="212dp"
                    android:text="@string/tv_contactNumberText"
                    android:textColor="@color/colorWhiteD"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                //Vehicle Name

                <TextView
                    android:id="@+id/tv_vehicleName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="250dp"
                    android:text="@string/tv_vehicleName"
                    android:textColor="@color/colorWhiteD"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_vehicleNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="160dp"
                    android:layout_marginTop="252dp"
                    android:text="@string/tv_vehicleNameText"
                    android:textColor="@color/colorWhiteD"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                //Location Details

                <TextView
                    android:id="@+id/tv_bookingDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="290dp"
                    android:text="@string/tv_locationDetails"
                    android:textColor="@color/colorWhiteD"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_locationDetailsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="180dp"
                    android:layout_marginTop="292dp"
                    android:text="@string/tv_locationDetailsText"
                    android:textColor="@color/colorWhiteD"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>


            <Button
                android:id="@+id/btn_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="465dp"
                android:layout_marginRight="90dp"
                android:backgroundTint="@color/buttonD"
                android:text="@string/btn_delete"
                android:textColor="@color/black" />

        </RelativeLayout>

    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        app:itemBackground="@color/colorHeader"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom = "true"
        />

</LinearLayout>